Update Swagger - Clinic and Operations
