# src/clinic/routes.js
@@ -2,9 +2,9 @@ const express = require('express');
 const router = express.Router();
 const clinicController = require('./controller');
 
-router.get('/clinic', clinicControler.verifyToken, clinicController.getAll);
-router.get('/clinic/:id', clinicControler.verifyToken, clinicController.getOne); 
-router.put('/clinic', clinicControler.verifyToken, clinicController.update);
+router.get('/clinic', clinicController.verifyToken, clinicController.getAll);
+router.get('/clinic/:id', clinicController.verifyToken, clinicController.getOne); 
+router.put('/clinic', clinicController.verifyToken, clinicController.update);
 router.delete('/clinic', clinicController.verifyToken, clinicController.delete);
 
 module.exports = router;
